--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+.popularMovies {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 100%;
+  height: 20vh;
+  overflow: hidden;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+img {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  transition: all 0.8s ease;
+  cursor: pointer;
+}
+img:hover {
+  transform: scale(1.2);
+  opacity: 0.9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-size: 1.3rem;
+}
+h4 {
+  color: rgb(167, 55, 55);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Filter-container button {
+  margin-top: 1rem;
+  margin-right: 2rem;
+  min-width: 5rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: white;
+  cursor: pointer;
+  border-radius: 1rem;
+  font-weight: bold;
+  color: rgb(69, 116, 155);
+  border: 2px solid rgb(49, 144, 168);
+}
+
+button.active {
+  background-color: rgb(178, 209, 231);
+}
+
+.morePicture {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.morePicture button {
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+  min-width: 5rem;
+  padding: 1rem 2rem;
+  border: none;
+  background: white;
+  cursor: pointer;
+  border-radius: 1rem;
+  font-weight: bold;
+  color: rgb(69, 116, 155);
+  border: 2px solid rgb(64, 166, 194);
 }
